﻿Notable changes in recent builds.

Maintained by hand, so what's "notable" is subjective! Contributors are
encouraged to add entries for their work.

All changes can be found via git - eg, for all changes afer a build:
    git log -rb3xx:
or
    https://github.com/mhammond/pywin32/compare/b3xx...main


Coming in build 305, as yet unreleased
--------------------------------------
* @kxrob put a lot of work towards removing use of the deprecated Unicode
  API so we can build on Python 3.12. This should be largely invisible, but
  please report any unintended consequences.

* win32api.GetTickCount() now returns an unsigned 64bit integer (@kxrob, #1946)

* win32pipe.GetNamedPipeHandleState() now takes a 3rd optional param
  indicating whether the username should be returned, and related constants
  added. (@kxrob, #1946)

* Added win32gui.GetTopWindow() and win32gui.GetAncestor() (@CristiFati, #1928)

* Tweaks to how pywintypes searches for DLLs to better support virtualenvs
  created with --system-site-packages. (@saaketp, #1933)

* Added win32event.CreateWaitableTimerExW (#1945, @zariiii9003)

* Changes in PARAM handling. Some functions which returned a WPARAM or LPARAM
  allowed you to return a pointer to a Python buffer object or a PyUnicode.
  These functions now only accept a Python long to be returned. Note that
  this DOES NOT apply to functions with accept WPARAM or LPARAM as arguments,
  only when they are being returned. Impacted functions are `OnNotify`
  handler, LV_ITEM/TV_ITEM objects, PyIContextMenu3::HandleMenuMsg2, and the
  result of a WNDPROC/DLGPROC (#1927).

* service registration had an overhaul, avoiding a complicated, and ultimately
  unnecessary "single globally registered service runner" concept.
  Now, when registering a service, the host pythonservice.exe runner will be
  copied to `sys.exec_prefix`, along with possibly `pywintypesXX.dll` and run
  from there. (#1908)
